update: 결함들 수정

--- a/src/main/resources/templates/fragments/common/common_header.html
+++ b/src/main/resources/templates/fragments/common/common_header.html
@@ -21,6 +21,8 @@
         position: fixed;
         left: 80%;
         top: 8%;
+        z-index: 1;
+        background: white;
     }
     .userDiv {
         text-align: center;
