--- a/src/main/resources/templates/fragments/common/common_include.html
+++ b/src/main/resources/templates/fragments/common/common_include.html
@@ -6,5 +6,6 @@
 <script th:src="@{/webjars/jquery/3.3.1-1/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 
 <th:block layout:fragment="html_head"></th:block>
