--- a/src/main/resources/templates/products/detail.html
+++ b/src/main/resources/templates/products/detail.html
@@ -140,7 +140,7 @@
 </th:block>
 <th:block layout:fragment="body_main">
     <br><br>
-    <div style="text-align: center"><h2><strong>상품 상세보기</strong></h2></div>
+    <div style="margin-left: 75px"><h2>상품 상세보기</h2></div>
     <hr style="padding-bottom: 40px">
     <div class="container-fluid" style="width: 60%;">
         <div>
@@ -153,8 +153,8 @@
             </nav>
         </div>
         <div class="row">
-            <div class="col">
-                <img th:src="@{${product.imagePath}}">
+            <div class="col" style="text-align: center;">
+                <img width="80%" height="auto;" th:src="@{${product.imagePath}}">
             </div>
             <div class="col" style="padding-top: 35px;">
                 <div style="font-family: Consolas, 돋움"><h2 th:text="${product.name}"></h2></div>
