--- a/src/main/resources/templates/products/search.html
+++ b/src/main/resources/templates/products/search.html
@@ -32,7 +32,7 @@
 </th:block>
 <th:block layout:fragment="body_main">
     <br><br>
-    <div style="text-align: center"><h2><strong>상품 검색</strong></h2></div>
+    <div style="margin-left: 75px"><h2>상품 검색</h2></div>
     <hr style="padding-bottom: 40px">
     <div class="container-fluid" style="width: 60%;">
         <div id="searchDiv">
